renamed Message -> Notification in design.go + improved returns by api && ran make goa
