# src/api/design/design.go
@@ -25,24 +25,28 @@ var _ = dsl.Service("ForwarderService", func() {
 	dsl.Description("The forwarder service forwards warnings to the appropriate channel")
 	dsl.Method("forward", func() {
 		dsl.Description("Forwards a warning to the appropriate channel")
-		dsl.Payload(Message)
+		dsl.Payload(Notification)
+
+		dsl.Error("InvalidNotificationType", dsl.String, "Invalid notification type")
 
 		dsl.HTTP(func() {
 			dsl.POST("/forward")
 			dsl.Response(dsl.StatusCreated)
+			dsl.Response("InvalidNotificationType", dsl.StatusBadRequest)
 		})
 
 		dsl.GRPC(func() {
 			dsl.Response(dsl.CodeOK)
+			dsl.Response("InvalidNotificationType", dsl.CodeInvalidArgument)
 		})
 	})
 })
 
-// Message defines the payload for the ForwarderService's forward method.
+// Notification defines the payload for the ForwarderService's forward method.
 // It contains the type, name & description of the event.
-var Message = dsl.Type("Message", func() {
+var Notification = dsl.Type("Notification", func() {
 	dsl.Field(1, "type", dsl.String, func() {
-		dsl.Description("The type of message")
+		dsl.Description("The type of notification")
 	})
 	dsl.Field(2, "name", dsl.String, func() {
 		dsl.Description("The name of the event")
